...
    case cannedAndJarred           = "Canned and Jarred"
    case frozen                    = "Frozen"
    case nutButtersJamsAndHoney    = "Nut butters, Jams, and Honey"
    case oilVinegarSaladDressing   = "Oil, Vinegar, Salad Dressing"
    case condiments                = "Condiments"
    case savorySnacks              = "Savory Snacks"
    case milkEggsOtherDairy        = "Milk, Eggs, Other Dairy"
    case ethnicFoods               = "Ethnic Foods"
    case teaAndCoffee              = "Tea and Coffee"
    case meat                      = "Meat"
    case gourmet                   = "Gourmet"
    case sweetSnacks               = "Sweet Snacks"
    case glutenFree                = "Gluten Free"
...
